resolved menulink fixed positioning on mobile

--- a/css/global.scss
+++ b/css/global.scss
@@ -68,133 +68,50 @@ left: 0;}
 
 
 
-.menu {
-	position: fixed;
-	right: -300px;
-	width: 300px;
-	height: 100%;
-	top: 0;
-	z-index: 10;
-	text-align: left;
+
+
+
+
+#menu {
+         position: fixed;
+         top: 0;
+         bottom: 0;
+         width: 13.755em;
+         right: -13.755em;
+         height: 100%;
+         z-index:10;
+
+         -webkit-transform: translate(0px, 0px);
+        -moz-transform: translate(0px, 0px);
+        -o-transform: translate(0px, 0px);
+        -ms-transform: translate(0px, 0px);
+        transform: translate(0px, 0px);
+        -webkit-transition: 0.15s ease;
+        -moz-transition: 0.15s ease;
+        -o-transition: 0.15s ease;
+        transition: 0.15s ease;
+   }
+   #menu a:hover{background-color:red;}
+
+    #menu.active {
+        background: #D6D5CE;
+        -webkit-transform: translate(-13.755em, 0px);
+        -moz-transform: translate(-13.755em, 0px);
+        -o-transform: translate(-13.755em, 0px);
+        -ms-transform: translate(-13.755em, 0px);
+        transform: translate(-13.755em, 0px);
+}
+#menu.active ul{
+        list-style-type:none;
+        margin-top:35px;
+	
 }
 
-
-.menu.menu-open {
-	right: 0px;
+.menu-link {
+      position: absolute;
+      top: 35px;
+      left: -75px;
 }
-
-.menu-wrap {
-	position: absolute;
-	top: 0;
-	left: 60px;
-	background: #1f2028;
-	width: 290px;
-	height: 100%;
-}
-
-
-
-.menu a {
-    text-transform: uppercase;
-	margin-left: 20px;
-	color: #ffffff;
-	display: block;
-	font-size: 14px;
-	font-weight: 400;
-	line-height: 40px;
-}
-
-.menu a:hover {
-	color: red;
-}
-
-.menu a:active {
-	color: #76C4D4;
-}
-
-.menu a > i {
-	float: left;
-	display: inline-block;
-	vertical-align: middle; 
-	text-align: left;
-	width: 25px;
-	font-size: 21px;
-	line-height: 40px;
-	margin: 25px 10px;
-	position:fixed;
-}
-
-.menu-close {
-	cursor: pointer;
-	display: block;
-	position: absolute;
-	font-size: 14px;
-	color: #808080;
-	width: 40px;
-	height: 40px;
-	line-height: 40px;
-	top: 20px;
-	right: 55px;
-	-webkit-transition: all .1s ease-in-out;
-	   -moz-transition: all .1s ease-in-out;
-		-ms-transition: all .1s ease-in-out;
-		 -o-transition: all .1s ease-in-out;
-			transition: all .1s ease-in-out;
-}
-
-.menu-close:hover {
-	color: #DEF1E5;
-	-webkit-transition: all .1s ease-in-out;
-	   -moz-transition: all .1s ease-in-out;
-		-ms-transition: all .1s ease-in-out;
-		 -o-transition: all .1s ease-in-out;
-			transition: all .1s ease-in-out;
-}
-.menu{
-	-webkit-transition: all .3s ease;
-	   -moz-transition: all .3s ease;
-		-ms-transition: all .3s ease;
-		 -o-transition: all .3s ease;
-			transition: all .3s ease;
-}
-
-
-
-
-
-
-
-
-#menuToggle {
-	position: absolute;
-	padding-right: 120px;
-	right: 260px;
-	top: 30px;
-	z-index: 141;
-	display: block;
-	text-align: center;
-	font-size: 24px;
-	color: red;
-	width: 40px;
-	height: 40px;
-	line-height: 40px;
-	cursor: pointer;
-	-webkit-transition: all .1s ease-in-out;
-	   -moz-transition: all .1s ease-in-out;
-		-ms-transition: all .1s ease-in-out;
-		 -o-transition: all .1s ease-in-out;
-			transition: all .1s ease-in-out;
-}
-
-#menu-close{
-    width: 60px;
-	height: 60px;}
-
-
-#menuToggle:hover {
-    color: black;
-}
-
 div.band .columns {
 	padding-top: 1em;
 	padding-bottom: 1em;
